Index spacing fix and div classing correction

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 20rem;
+    gap: 5rem;
     margin: 5rem;
 }
 
